src/ts/tests/fixtures/invalid_modifiers/wrangler.cloesce.ts
// @ts-nocheck
// InvalidPropertyModifier

@WranglerEnv
export class Foo {
  private bar: number;
}
